--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matin Nejatbakhsh - Software Developer</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/code.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/code.svg">
+<link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/FortAwesome/Font-Awesome/master/svgs/solid/code.svg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
         
