--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 <body>
     <div class="container">
         <div class="profile-section">
-            <img src="main_image.jpg alt="Profile" class="profile-image" id="profileImage">
+            <img src="main_image.jpg class="profile-image" id="profileImage">
             <div class="profile-info">
                 <h1>Matin Nejatbakhsh</h1>
                 <h2>Software Developer</h2>
